--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
 
   <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
     <ul class="navbar-nav justify-content-end">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item ">
+        <a class="nav-link" href="index.html">Home </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="service.html">Services</a>
