front page update

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase"><strong>Pro</strong><small>fessional.</small></h1>
+          <h1 class="mx-auto  text-uppercase"><strong>Pro</strong><small>fessional.</small></h1>
           <h2 class="mx-auto mt-2 mb-5">Simple, custom, and responsive HTML web development services for your business.</h2>
-          <a href="contact.html" class="btn btn-primary">Get In Touch</a>
+          <a href="#contact" class="btn btn-primary js-scroll-trigger">Get In Touch</a>
         </div>
       </div>
     </header>
@@ -70,8 +70,8 @@
     <section id="about" class="about-section text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2 class="mb-4">Simplicity stays with you forever.</h2>
+          <div class="col-md-12 text-white">
+            <h2>Simplicity stays with you forever.</h2>
             <p>This is why there is no method to creating a website but to have only what is needed. Focus on what is important and deliver on one goal. Often times the best way to get a message accross is to have a simple way for your audience to understand it.</p>
           </div>
         </div>
@@ -86,7 +86,7 @@
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+            <img class="img-fluid mb-3 mb-lg-0" src="img/green-grassy-hill-by-the-sea_925x.jpg" alt="">
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
@@ -99,7 +99,7 @@
         <!-- Project One Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+            <img class="img-fluid" src="img/private-holiday-beach_925x.jpg" alt="">
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
@@ -117,7 +117,7 @@
         <!-- Project Two Row -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+            <img class="img-fluid" src="img/blue-ocean-with-sandy-beach_925x.jpg" alt="">
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
