--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
 
     <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand js-scroll-trigger" href="#page-top"><strong>PRO</strong><small>FESSIONAL</small></a>
+  <a class="navbar-brand js-scroll-trigger" href="#page-top"><i class="far fa-star"></i>
+
+<strong>PRO</strong><small>SIM</small></a>
   
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
-    <ul class="navbar-nav justify-content-end">
+    <ul class="navbar-nav justify-content-end text-center">
       <li class="nav-item ">
         <a class="nav-link js-scroll-trigger" href="#page-top">Home </a>
       </li>
@@ -58,8 +60,8 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto  text-uppercase"><strong>Pro</strong><small>fessional.</small></h1>
-          <h2 class="mx-auto mt-2 mb-5">Simple, custom, and responsive HTML web development services for your business.</h2>
+          <h1 class="mx-auto  text-uppercase"><strong>Pro</strong>fessionaly Simple</h1>
+          <h2 class="mx-auto mt-2 mb-5">Custom, responsive HTML web development services for your business.</h2>
           <a href="#contact" class="btn btn-primary js-scroll-trigger">Get In Touch</a>
         </div>
       </div>
@@ -203,7 +205,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy;  2018 <strong>PRO</strong><small>FESSIONAL</small>
+        Copyright &copy;  2018 <strong>PRO</strong><small>SIM</small>
       </div>
     </footer>
 
