--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto  text-uppercase"><strong>Pro</strong>fessionaly Simple</h1>
+          <h1 class="mx-auto text-uppercase">Professionaly Simple</h1>
           <h2 class="mx-auto mt-2 mb-5">Custom, responsive HTML web development services for your business.</h2>
           <a href="#contact" class="btn btn-primary js-scroll-trigger">Get In Touch</a>
         </div>
