--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>RG + Digital Media Marketing</title>
+    <title>RG + Digital Business Services </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">RG + Digital Media Marketing </a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">RG + DBS</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -61,20 +61,22 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Welcome!</div>
-          <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">How Can I Help You?</a>
+          <div class="intro-lead-in"> Your all-in-one </div>
+          <div class="intro-heading text-uppercase"> Digital Business Services </div>
+          <a class="btn btn-secondary btn-md text-uppercase js-scroll-trigger" href="#services">Watch Video</a>
         </div>
       </div>
     </header>
 
-    <!-- Services -->
+
+
+    <!-- Services 
     <section id="services">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Services</h2>
-            <h3 class="section-subheading text-muted">A few things I'm able to provide your growing business.</h3>
+            <h3 class="section-subheading text-muted">Skilled, experienced to bring the best quality and service in:</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -84,37 +86,45 @@
               <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">E-Commerce</h4>
-            <p class="text-muted">There is never a better time to start selling online than right now! Let me help you get your products live and online. From taking high-res pictures to content development its all what I do.</p>
+            <p class="text-muted"> Make a digital impression, get your product selling online.</p>
           </div>
           <div class="col-md-3">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Responsive Design</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Web Development</h4>
+            <p class="text-muted"> Let your customers know about your business.</p>
           </div>
           <div class="col-md-3">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Web Security</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Advertising</h4>
+            <p class="text-muted"> Get more traffic and sales with promoting your product or business.</p>
           </div>
           <div class="col-md-3">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Web Security</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Design</h4>
+            <p class="text-muted"> Communicate your idea with targeted messages </p>
           </div>
         </div>
-      </div>
-    </section>
+      </div> 
+    </section>  -->
 
-    <!-- Portfolio Grid -->
+    <div class="text-center m-4 p-4" >
+      <div class="container">
+        <div class="intro-text">
+          <a class="btn btn-primary btn-xl text-uppercase" href="mailto:raulghiurau@gmail.com">Get In Touch</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Portfolio Grid 
     <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
@@ -210,9 +220,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <!-- About -->
+    <!-- About 
     <section id="about">
       <div class="container">
         <div class="row">
@@ -291,9 +301,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <!-- Team -->
+    <!-- Team
     <section class="bg-light" id="team">
       <div class="container">
         <div class="row">
@@ -382,9 +392,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>  -->
 
-    <!-- Clients -->
+    <!-- Clients 
     <section class="py-5">
       <div class="container">
         <div class="row">
@@ -410,9 +420,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <!-- Contact -->
+    <!-- Contact 
     <section id="contact">
       <div class="container">
         <div class="row">
@@ -455,16 +465,16 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
+            <span class="copyright">Copyright &copy; RG + DBS 2018</span>
           </div>
-          <div class="col-md-4">
+         <!--  <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
@@ -482,7 +492,7 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </div> -->
           <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
