--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">RG + DBS</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
         </button>
@@ -53,7 +53,7 @@
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </nav>
 
@@ -61,8 +61,9 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in"> Your all-in-one </div>
+          
           <div class="intro-heading text-uppercase"> Digital Business Services </div>
+          <div class="intro-lead-in"> What is DBS? </div>
           <a class="btn btn-secondary btn-md text-uppercase js-scroll-trigger" href="#services">Watch Video</a>
         </div>
       </div>
@@ -119,7 +120,7 @@
     <div class="text-center m-4 p-4" >
       <div class="container">
         <div class="intro-text">
-          <a class="btn btn-primary btn-xl text-uppercase" href="mailto:raulghiurau@gmail.com">Get In Touch</a>
+          <a class="btn btn-primary btn-xl text-uppercase" href="mailto:raulghiurau@gmail.com">Get Started Today</a>
         </div>
       </div>
     </div>
@@ -303,19 +304,19 @@
       </div>
     </section> -->
 
-    <!-- Team
-    <section class="bg-light" id="team">
+    <!-- Team -->
+    <section class="bg-light text-center" id="team">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Meet your expert</h2>
+            <h3 class="section-subheading text-muted">Ready to answer your questions.</h3>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-4">
+       <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+              <!-- <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
               <h4>Kay Garland</h4>
               <p class="text-muted">Lead Designer</p>
               <ul class="list-inline social-buttons">
@@ -334,15 +335,15 @@
                     <i class="fab fa-linkedin-in"></i>
                   </a>
                 </li>
-              </ul>
+              </ul> -->
             </div>
-          </div>
+          </div> 
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-              <h4>Larry Parker</h4>
-              <p class="text-muted">Lead Marketer</p>
-              <ul class="list-inline social-buttons">
+              <h4>Raul Ghiurau</h4>
+              <p class="text-muted">Business Services Professional</p>
+             <!--  <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
                     <i class="fab fa-twitter"></i>
@@ -358,12 +359,12 @@
                     <i class="fab fa-linkedin-in"></i>
                   </a>
                 </li>
-              </ul>
+              </ul> -->
             </div>
           </div>
-          <div class="col-sm-4">
+         <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+              <!-- <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
               <h4>Diana Pertersen</h4>
               <p class="text-muted">Lead Developer</p>
               <ul class="list-inline social-buttons">
@@ -382,17 +383,18 @@
                     <i class="fab fa-linkedin-in"></i>
                   </a>
                 </li>
-              </ul>
+              </ul> -->
             </div>
-          </div>
+          </div> 
         </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+            <p class="large text-muted">Over 6 years of experience specializing in Marketing management for Ecommerce companies. Building online presence and manage growth are my specialites. My passion is product marketing and online digital advertising.
+            </p>
           </div>
         </div>
       </div>
-    </section>  -->
+    </section> 
 
     <!-- Clients 
     <section class="py-5">
