--- a/index.html
+++ b/index.html
@@ -117,13 +117,7 @@
       </div> 
     </section>  -->
 
-    <div class="text-center m-4 p-4" >
-      <div class="container">
-        <div class="intro-text">
-          <a class="btn btn-primary btn-xl text-uppercase" href="mailto:raulghiurau@gmail.com">Get Started Today</a>
-        </div>
-      </div>
-    </div>
+   
 
     <!-- Portfolio Grid 
     <section class="bg-light" id="portfolio">
@@ -389,9 +383,12 @@
         </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">Over 6 years of experience specializing in Marketing management for Ecommerce companies. Building online presence and manage growth are my specialites. My passion is product marketing and online digital advertising.
+            <p class="large text-muted">Over 6 years of experience specializing in Marketing management for Ecommerce companies. Building online presence and manage growth are his specialites. A driving passion is product marketing and online digital advertising.
             </p>
           </div>
+        </div>
+         <div class="m-4 intro-text">
+          <a class="btn btn-primary btn-xl text-uppercase" href="mailto:raulghiurau@gmail.com">Get Started Today</a>
         </div>
       </div>
     </section> 
