--- a/index.html
+++ b/index.html
@@ -64,14 +64,12 @@
           
           <div class="intro-heading text-uppercase"> Digital Business Services </div>
           <div class="intro-lead-in"> What is DBS? </div>
-  
-        
 
           <div id="light">
             <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
-            <video id="VisaChipCardVideo" width="600" controls>
-                <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-                <!--Browser does not support <video> tag -->
+              <video id="VisaChipCardVideo" width="600" controls>
+                  <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+                  <!--Browser does not support <video> tag -->
               </video>
           </div>
 
@@ -84,7 +82,6 @@
         </div>
       </div>
     </header>
-
 
 
     <!-- Services -->
@@ -132,7 +129,7 @@
             <ul class="list-unstyled">
                 <li>Digital Video Production</li>
                 <li>Social Media Planning</li>
-                <li>Email / Campaigns Blasts</li>
+                <li>Email Campaigns / Blasts</li>
             </ul>
           </div>
         </div>
@@ -519,7 +516,7 @@
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
+                    <li>Date: September 2016</li>
                     <li>Client: OTR Performance</li>
                     <li>Category: Web Development / Branding</li>
                   </ul>
