--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <h2 class="text-white js-scroll-trigger" href="#page-top">d+b</h2>
+        <h2 class="text-white js-scroll-trigger" href="#page-top">GURU</h2>
          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -50,7 +50,7 @@
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
             </li>
             <li class="nav-item">
-              <a class="mt-1 mb-1 nav-link badge badge-secondary" href="mailto:raulghiurau@gmail.com">Contact</a>
+              <a class="mt-1 mb-1 nav-link badge badge-primary" href="mailto:raulghiurau@gmail.com">Contact</a>
             </li>
           </ul>
         </div>
@@ -61,27 +61,46 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          
-          <div class="intro-heading text-uppercase"> Digital + Business </div>
-          <div class="intro-lead-in"> What is Digital + Business? </div>
+          <div class="intro-heading text-uppercase mb-2"> Digital + Business </div>
+          <div class="intro-lead-in">How we can help establish your business? </div>
 
-          <div id="light">
+         <!-- <div id="light">
             <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
               <video id="VisaChipCardVideo" width="600" controls>
                   <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-                  <!--Browser does not support <video> tag -->
+                  Browser does not support <video> tag 
               </video>
           </div>
-
           <div id="fade" onClick="lightbox_close();"></div>
-
           <div>
             <a class="btn btn-secondary btn-md text-uppercase" href="#" onclick="lightbox_open();">Watch video</a>
+          </div> -->
+          <div>
+            <a class="btn btn-primary btn-xl text-uppercase" href="mailto:raulghiurau@gmail.com">Ask a Question</a>
           </div>
 
         </div>
       </div>
     </header>
+
+
+
+    <div class="container">
+      <div class="row text-center mt-3">
+          <div class="col-md-3">
+            <img src="img/portfolio/OVSL 2.jpg">
+          </div>
+          <div class="col-md-3">
+            <img src="img/portfolio/OTR.jpg">
+          </div>
+          <div class="col-md-3">
+            <img src="img/portfolio/TruckfaultsGS.jpg">
+          </div>
+           <div class="col-md-3">
+            <img src="img/portfolio/OVSL 2.jpg">
+          </div>
+      </div>
+    </div>
 
 
     <!-- Services -->
