--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="description" content="">
       <meta name="author" content="">
 
-      <title> RG + Digital Business Services </title>
+      <title> Building an online digital footprint for your business. </title>
 
       <!-- Bootstrap core CSS -->
       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
       <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
       <!-- Custom styles for this template -->
-      <link href="css/agency.min.css" rel="stylesheet">
+      <link href="css/agency.css" rel="stylesheet">
 
   </head>
 
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <h2 class="text-white js-scroll-trigger" href="#page-top">GURU</h2>
+        <h2 class="text-white js-scroll-trigger" href="#page-top">RG</h2>
          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -47,10 +47,10 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+              <a class="nav-link js-scroll-trigger" href="#team">Expert</a>
             </li>
             <li class="nav-item">
-              <a class="mt-1 mb-1 nav-link badge badge-primary" href="mailto:raulghiurau@gmail.com">Contact</a>
+              <a class="mt-1 mb-1 nav-link badge badge-warning" href="mailto:raulghiurau@gmail.com">Contact</a>
             </li>
           </ul>
         </div>
@@ -61,8 +61,9 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-heading text-uppercase mb-2"> Digital + Business </div>
-          <div class="intro-lead-in">How we can help establish your business? </div>
+
+          <div class="intro-heading text-uppercase mb-2"> Grow your Business + Digital </div>
+          <div class="intro-lead-in">Im here to guide your digital reach as you build your business</div>
 
          <!-- <div id="light">
             <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
@@ -76,31 +77,23 @@
             <a class="btn btn-secondary btn-md text-uppercase" href="#" onclick="lightbox_open();">Watch video</a>
           </div> -->
           <div>
-            <a class="btn btn-primary btn-xl text-uppercase" href="mailto:raulghiurau@gmail.com">Ask a Question</a>
+            <a class="btn btn-primary btn-xl text-uppercase" href="mailto:raulghiurau@gmail.com">Lets get started</a>
           </div>
 
         </div>
       </div>
     </header>
 
-
-
+<div class="description">
     <div class="container">
       <div class="row text-center mt-3">
-          <div class="col-md-3">
-            <img src="img/portfolio/OVSL 2.jpg">
-          </div>
-          <div class="col-md-3">
-            <img src="img/portfolio/OTR.jpg">
-          </div>
-          <div class="col-md-3">
-            <img src="img/portfolio/TruckfaultsGS.jpg">
-          </div>
-           <div class="col-md-3">
-            <img src="img/portfolio/OVSL 2.jpg">
+          <div class="col-md-12">
+            <h2> Ecommerce and Online Branding (my speciality) </h2>
+            <p> No shortcuts, no gimmics just hard work and diligence. Its what it takes to get your business online and present. Its your baby, you've giving it life and want to take it to the next level. So, whats the next step? </p>
           </div>
       </div>
     </div>
+  </div>
 
 
     <!-- Services -->
@@ -108,8 +101,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Services</h2>
-            <h3 class="section-subheading text-muted">Bringing the best quality and service</h3>
+            <h2 class="section-heading text-uppercase">I'm versital to create and deliver final product in the digital space.</h2>
           </div>
         </div>
         <div class="row text-center">
@@ -162,7 +154,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Projects</h2>
-            <h3 class="section-subheading text-muted">Our Most Recent Works</h3>
+            <h3 class="section-subheading text-muted">Recent Works</h3>
           </div>
         </div>
         <div class="row">
@@ -341,7 +333,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Meet your expert</h2>
-            <h3 class="section-subheading text-muted">Ready to answer your questions.</h3>
+            <h3 class="section-subheading text-muted">Ready to start your next project.</h3>
           </div>
         </div>
         <div class="row">
@@ -373,7 +365,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
               <h4>Raul Ghiurau</h4>
-              <p class="text-muted">Business Services Professional</p>
+              <p class="text-muted">Digital Business Services Professional</p>
              <!--  <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -461,8 +453,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="text-white">I try to answer all the questions but, if I missed something let me know</h3>
+            <h2 class="section-heading text-uppercase">Contact Me</h2>
+            <h3 class="text-white">Your questions - answered! Ask away! </h3>
              <div class="m-4 intro-text">
                 <a class="btn btn-primary btn-xl text-uppercase" href="mailto:raulghiurau@gmail.com">Get Started Today</a>
             </div>
