--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-
-          <div class="intro-heading text-uppercase mb-2"> Grow your Business + Digital </div>
-          <div class="intro-lead-in">Im here to guide your digital reach as you build your business</div>
+          <div class="intro-heading mb-2"> Grow Your Online Business</span> </div>
+          <div class="intro-lead-in">Your business is growing! Is your online presence growing with it? Im here to guide your digital reach as you build your business.</div>
 
          <!-- <div id="light">
             <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
@@ -77,7 +76,7 @@
             <a class="btn btn-secondary btn-md text-uppercase" href="#" onclick="lightbox_open();">Watch video</a>
           </div> -->
           <div>
-            <a class="btn btn-primary btn-xl text-uppercase" href="mailto:raulghiurau@gmail.com">Lets get started</a>
+            <a class="btn btn-md text-uppercase" href="mailto:raulghiurau@gmail.com">Start Here</a>
           </div>
 
         </div>
@@ -101,7 +100,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">I'm versital to create and deliver final product in the digital space.</h2>
+            <h2 class="section-heading ">I'm versital to create and deliver final product in the digital space.</h2>
           </div>
         </div>
         <div class="row text-center">
