--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
        
           <div class="col-sm-12">
             <div class="team-member">
-              <img class="mx-auto rounded-circle mb-2" src="img/team/2.jpg" alt="">
+              <!-- <img class="mx-auto rounded-circle mb-2" src="img/team/2.jpg" alt=""> -->
               <h3>Raul Ghiurau</h3>
               <p class="text-muted">Digital Business Services Professional</p>
               <ul class="list-inline social-buttons">
@@ -346,6 +346,11 @@
                 <li class="list-inline-item">
                   <a href="#">
                     <i class="fas fa-mobile-alt"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#">
+                    <i class="fab fa-linkedin-in"></i>
                   </a>
                 </li>
               </ul>
