--- a/index.html
+++ b/index.html
@@ -88,12 +88,11 @@
       <div class="row text-center mt-3">
           <div class="col-md-12">
             <h2 class="description-heading"> Branding and ecommerece (my specialties) </h2>
-            <p class="col-lg-8 mx-auto text-center"> No shortcuts, no gimmics just hard work and diligence. Its what it takes to get your business online and present. Its your baby, you've given it life and want to take it to the next level. So, whats the next step? </p>
+            <p class="col-lg-8 mx-auto text-center"> No shortcuts, no gimmics just hard work, diligence and determination. Its what it takes to get your business online and present. Whats the next step? </p>
           </div>
       </div>
     </div>
   </div>
-
 
     <!-- Services -->
     <section id="services">
