--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       </div>
     </section>
 
-    <!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
+<!-- PRICING --->
 
 <section class="pricing py-5">
   <div class="container">
