--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#plans">Plans</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
@@ -323,22 +326,22 @@
 
 <!-- PRICING --->
 
-<section class="pricing py-5">
+<section class="pricing py-5" id="plans">
   <div class="container">
     <div class="row">
       <!-- Basic Tier -->
       <div class="col-lg-4">
         <div class="card mb-5 mb-lg-0">
           <div class="card-body">
-            <h5 class="card-title text-muted text-uppercase text-center">Started</h5>
+            <h5 class="card-title text-muted text-uppercase text-center">Starter</h5>
             <h6 class="card-price text-center">$499</h6>
             <hr>
             <ul class="fa-ul">
               <li><span class="fa-li"><i class="fas fa-check"></i></span>One Page Site</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>5GB Storage</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Public Projects</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Community Access</li>
-              <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Unlimited Private Projects</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Mobile Friendly</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Traffic Report and Updates</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Contact Form</li>
+              <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Updates</li>
               <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Dedicated Phone Support</li>
               <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Free Subdomain</li>
               <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
@@ -352,7 +355,7 @@
         <div class="card mb-5 mb-lg-0">
           <div class="card-body">
             <h5 class="card-title text-muted text-uppercase text-center">Plus</h5>
-            <h6 class="card-price text-center">$999<span class="period">/month</span></h6>
+            <h6 class="card-price text-center">$999</h6>
             <hr>
             <ul class="fa-ul">
               <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>5 Users</strong></li>
@@ -373,7 +376,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title text-muted text-uppercase text-center">Pro</h5>
-            <h6 class="card-price text-center">$1449<span class="period">/month</span></h6>
+            <h6 class="card-price text-center">$1449</h6>
             <hr>
             <ul class="fa-ul">
               <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Unlimited Users</strong></li>
