--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       <meta name="description" content="">
       <meta name="author" content="">
 
-      <title> Building an online digital footprint for your business. </title>
+      <title>RG - Building an online digital footprint for your business. </title>
 
       <!-- Bootstrap core CSS -->
-      <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
       <!-- Custom fonts for this template -->
       <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -53,7 +53,7 @@
               <a class="nav-link js-scroll-trigger" href="#team">Expert</a>
             </li>
             <li class="nav-item">
-              <a class="mt-1 mb-1 nav-link badge badge-primary" href="mailto:raulghiurau@gmail.com">Contact</a>
+              <a class="mt-1 mb-1 nav-link badge badge-primary" href="mailto:raulghiurau@gmail.com">Contact Now</a>
             </li>
           </ul>
         </div>
@@ -65,7 +65,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-heading mb-4"> Your Digital Business Expert</span> </div>
-          <div class="intro-lead-in">Business is growing! Ready to take it to the next level? Im here to guide your digital reach as you build your business.</div>
+          <div class="intro-lead-in"> Im here to guide your digital reach building your business.</div>
 
          <!-- <div id="light">
             <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
@@ -79,7 +79,7 @@
             <a class="btn btn-secondary btn-md text-uppercase" href="#" onclick="lightbox_open();">Watch video</a>
           </div> -->
           <div>
-            <a class="btn btn-md text-uppercase" href="mailto:raulghiurau@gmail.com">Start Here</a>
+            <a class="btn btn-lg text-uppercase" href="mailto:raulghiurau@gmail.com">Start Here</a>
           </div>
 
         </div>
@@ -91,7 +91,7 @@
       <div class="row text-center mt-3">
           <div class="col-md-12">
             <h2 class="description-heading"> Branding and ecommerece (my specialties) </h2>
-            <p class="col-lg-8 mx-auto text-center"> No shortcuts, no gimmics just hard work, diligence and determination. Its what it takes to get your business online and present. Whats the next step? </p>
+            <p class="col-lg-8 mx-auto text-center"> No shortcuts, no gimmics just hard work, diligence and determination. </p>
           </div>
       </div>
     </div>
@@ -102,7 +102,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="col-lg-8 mx-auto text-center mb-4">First we must strategize the best course of action for your business.</h2>
+            <h2 class="col-lg-8 mx-auto text-center mb-4">Marketing</h2>
           </div>
         </div>
         <div class="row text-center">
@@ -346,7 +346,8 @@
               <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Free Subdomain</li>
               <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
             </ul>
-            <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+            
+            <a href="#" class="btn btn-block btn-primary text-uppercase">Get Started</a>
           </div>
         </div>
       </div>
@@ -367,7 +368,8 @@
               <li><span class="fa-li"><i class="fas fa-check"></i></span>Free Subdomain</li>
               <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
             </ul>
-            <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+            
+            <a href="#" class="btn btn-block btn-primary text-uppercase">Get Started</a>
           </div>
         </div>
       </div>
@@ -388,7 +390,7 @@
               <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Unlimited</strong> Free Subdomains</li>
               <li><span class="fa-li"><i class="fas fa-check"></i></span>Monthly Status Reports</li>
             </ul>
-            <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+            <a href="#" class="btn btn-block btn-primary text-uppercase">Get Started</a>
           </div>
         </div>
       </div>
