--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         <div class="card mb-5 mb-lg-0">
           <div class="card-body">
             <h5 class="card-title text-muted text-uppercase text-center">Starter</h5>
-            <h6 class="card-price text-center">$499</h6>
+            <h6 class="card-price text-center">$699</h6>
 
             <hr>
 
@@ -368,12 +368,12 @@
         <div class="card mb-5 mb-lg-0">
           <div class="card-body">
             <h5 class="card-title text-muted text-uppercase text-center">Plus</h5>
-            <h6 class="card-price text-center">$999</h6>
+            <h6 class="card-price text-center">$1299</h6>
             <hr>
             <ul class="fa-ul">
               <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>5 Page Website</strong></li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Email Sign up</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>2 Blogs</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Email Capture Set up</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>2 Blogs Creation</li>
               <li><span class="fa-li"><i class="fas fa-check"></i></span>+ Everything in Starter</li>
              <!--      <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Private Projects</li>
               <li><span class="fa-li"><i class="fas fa-check"></i></span>Dedicated Phone Support</li>
@@ -390,7 +390,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title text-muted text-uppercase text-center">Professional</h5>
-            <h6 class="card-price text-center">$1449</h6>
+            <h6 class="card-price text-center">$1799</h6>
                         <hr>
             <ul class="fa-ul">
               <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>ECommerce</strong></li>
