--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#plans">Plans</a>
             </li>
-           <!--  <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li> -->
             <li class="nav-item">
@@ -444,6 +444,11 @@
                     <i class="fas fa-link"></i>
                   </a>
                 </li>
+                <li class="list-inline-item">
+                  <a href="about.html">
+                    <i class="fas fa-link"></i>
+                  </a>
+                </li>
               </ul>
               <div class="col-lg-8 mx-auto text-center">
                     <p class="large text-muted mt-4">Over 6 years of experience specializing in Marketing management for Ecommerce companies building online presence and manage growth are my specialites. A driving passion is product marketing and online digital advertising.
@@ -503,7 +508,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-4">
             <span class="copyright">Copyright &copy; RG 2019</span>
           </div>
          <!--  <div class="col-md-4">
