--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="description" content="">
       <meta name="author" content="">
 
-      <title>RG - Building your business's online digital footprint</title>
+      <title>Junia Marketing - Digital Marketing and Ecommerce Expert</title>
 
       <!-- Bootstrap core CSS -->
       <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <h2 class="text-white js-scroll-trigger" href="#page-top">RG</h2>
+        <h2 class="text-white js-scroll-trigger" href="#page-top">JM</h2>
          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -46,9 +46,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#plans">Plans</a>
             </li>
-           <!--  <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
-            </li> -->
+            </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Expert</a>
             </li>
@@ -504,7 +504,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <span class="copyright">Copyright &copy; RG 2019</span>
+            <span class="copyright">Copyright &copy; Junia Marketing 2019</span>
           </div>
          <!--  <div class="col-md-4">
             <ul class="list-inline social-buttons">
