update to pricing

--- a/index.html
+++ b/index.html
@@ -341,10 +341,10 @@
 
 <!-- PRICING --->
 
-<section class="pricing py-5" id="plans">
+<!-- <section class="pricing py-5" id="plans">
   <div class="container">
     <div class="row">
-      <!-- Basic Tier -->
+ 
       <div class="col-lg-4">
         <div class="card mb-5 mb-lg-0">
           <div class="card-body">
@@ -363,7 +363,7 @@
           </div>
         </div>
       </div>
-      <!-- Plus Tier -->
+    
       <div class="col-lg-4">
         <div class="card mb-5 mb-lg-0">
           <div class="card-body">
@@ -375,17 +375,17 @@
               <li><span class="fa-li"><i class="fas fa-check"></i></span>Email Capture Set up</li>
               <li><span class="fa-li"><i class="fas fa-check"></i></span>2 Blogs Creation</li>
               <li><span class="fa-li"><i class="fas fa-check"></i></span>+ Everything in Starter</li>
-             <!--      <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Private Projects</li>
+                  <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Private Projects</li>
               <li><span class="fa-li"><i class="fas fa-check"></i></span>Dedicated Phone Support</li>
               <li><span class="fa-li"><i class="fas fa-check"></i></span>Free Subdomain</li>
-              <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li> -->
+              <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
             </ul>
             
             <a href="mailto:info@juniamarketing.com?subject=I am interested in a Plus website!" class="btn btn-block btn-primary text-uppercase">Get Started</a>
           </div>
         </div>
       </div>
-      <!-- Pro Tier -->
+   
       <div class="col-lg-4">
         <div class="card">
           <div class="card-body">
@@ -407,7 +407,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
     <!-- Team -->
     <section class="text-center" id="team">
