update the about page

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
             </li> -->
-            <li class="nav-item">
+           <!--  <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#plans">Plans</a>
-            </li>
+            </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="#team">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Expert</a>
